--- a/blog-backend/src/main/resources/application.properties
+++ b/blog-backend/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# AWS S3 Configuration
+
+aws.region=ca-central-1
+aws.s3.bucketName=veterinary-blogs
