--- a/blog-backend/src/main/resources/application.properties
+++ b/blog-backend/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.jpa.show-sql=true
 
 aws.region=ca-central-1
 aws.s3.bucketName=veterinary-blogs
+
+# MAIL CONFIG
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mail.jasminekaur12@gmail.com
+spring.mail.password=cexs bwzi fred drbx
+
