--- a/blog-backend/pom.xml
+++ b/blog-backend/pom.xml
@@ -82,6 +82,11 @@
 			<artifactId>s3</artifactId>
 			<version>2.20.26</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
